--- a/src/main/resources/templates/static/header.html
+++ b/src/main/resources/templates/static/header.html
@@ -61,7 +61,7 @@
                         <div class="d-flex  flex-column flex-lg-row align-items-center">
                             <ul class="navbar-nav  ">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="about.html">About </a>
@@ -76,7 +76,10 @@
                                     <a class="nav-link" href="contact.html">Contact Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Login</a>
+                                    <a class="nav-link" href="signin">Login</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="cart">Cart</a>
                                 </li>
                             </ul>
                             <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
