--- a/src/main/resources/templates/views/index.html
+++ b/src/main/resources/templates/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <!-- Basic -->
@@ -34,6 +34,7 @@
 
 <!-- shop section -->
 <section class="shop_section layout_padding">
+    <input type="hidden" id="userId" th:value="${userId}">
     <div class="container">
         <div class="box">
             <div class="detail-box">
@@ -102,75 +103,13 @@
         </div>
     </div>
     <div class="container-fluid">
+        <div class="text-center container py-5">
+            <h4 class="mt-4 mb-5"><strong>Các sản phẩm</strong></h4>
+            <div class="row" id="medicineContainer">
 
-        <div class="fruit_container">
-            <div class="box">
-                <img src="images/f-1.jpg" alt="">
-                <div class="link_box">
-                    <h5>
-                        Orange
-                    </h5>
-                    <a href="">
-                        Buy Now
-                    </a>
-                </div>
-            </div>
-            <div class="box">
-                <img src="images/f-2.jpg" alt="">
-                <div class="link_box">
-                    <h5>
-                        Blueberry
-                    </h5>
-                    <a href="">
-                        Buy Now
-                    </a>
-                </div>
-            </div>
-            <div class="box">
-                <img src="images/f-3.jpg" alt="">
-                <div class="link_box">
-                    <h5>
-                        Banana
-                    </h5>
-                    <a href="">
-                        Buy Now
-                    </a>
-                </div>
-            </div>
-            <div class="box">
-                <img src="images/f-4.jpg" alt="">
-                <div class="link_box">
-                    <h5>
-                        Apple
-                    </h5>
-                    <a href="">
-                        Buy Now
-                    </a>
-                </div>
-            </div>
-            <div class="box">
-                <img src="images/f-5.jpg" alt="">
-                <div class="link_box">
-                    <h5>
-                        Mango
-                    </h5>
-                    <a href="">
-                        Buy Now
-                    </a>
-                </div>
-            </div>
-            <div class="box">
-                <img src="images/f-6.jpg" alt="">
-                <div class="link_box">
-                    <h5>
-                        Strawberry
-                    </h5>
-                    <a href="">
-                        Buy Now
-                    </a>
-                </div>
             </div>
         </div>
+
     </div>
 </section>
 
@@ -332,6 +271,7 @@
 <script type="text/javascript" src="/js/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" src="/js/bootstrap.js"></script>
 <script type="text/javascript" src="/js/custom.js"></script>
+<script src="/js/medicine.js"></script>
 
 </body>
 
