--- a/src/main/resources/templates/static/header.html
+++ b/src/main/resources/templates/static/header.html
@@ -11,7 +11,7 @@
         <div class="brand_box">
             <a class="navbar-brand" href="index.html">
         <span>
-          Ninom
+          EcoPharm
         </span>
             </a>
         </div>
@@ -22,18 +22,18 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="img-box">
-                            <img src="images/slider-img.jpg" alt="">
+                            <img src="images/m-1.jpg" alt="">
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="img-box">
-                            <img src="images/slider-img.jpg" alt="">
+                            <img src="images/m-2.jpg" alt="">
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="img-box">
-                            <img src="images/slider-img.jpg" alt="">
-                        </div>
+                            <img src="images/m-3.jpg" alt="">
+                        </div>me
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -59,22 +59,9 @@
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <div class="d-flex  flex-column flex-lg-row align-items-center">
-                            <ul class="navbar-nav  ">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="fruit.html">Our Fruit </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="testimonial.html">Testimonial</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact Us</a>
-                                </li>
+                            <ul id="categoryList" class="navbar-nav">
+                            </ul>
+                            <ul class="navbar-nav">
                                 <li class="nav-item">
                                     <a class="nav-link" href="signin">Login</a>
                                 </li>
@@ -92,5 +79,9 @@
         </div>
     </section>
 </header>
+
+
+
+
 </body>
 </html>
