--- a/src/main/resources/templates/views/cart.html
+++ b/src/main/resources/templates/views/cart.html
@@ -32,7 +32,7 @@
     </table>
     <button class="btn btn-danger" onclick="clearCart()">Clear Cart</button>
     <a href="index" class="btn btn-primary">Continue Shopping</a>
-    <a href="index" class="btn btn-success">Pay</a>
+    <a href="check-out" class="btn btn-success">Pay</a>
   </div>
 <div th:include="static/footer :: footer"></div>
 
