--- a/src/main/resources/templates/static/footer.html
+++ b/src/main/resources/templates/static/footer.html
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="info_logo">
                 <h2>
-                    NiNom
+                    EcoPharm
                 </h2>
             </div>
             <div class="info_contact">
