--- a/src/main/resources/templates/views/index.html
+++ b/src/main/resources/templates/views/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Ninom</title>
+    <title>EcoPharm</title>
 
     <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -39,7 +39,7 @@
         <div class="box">
             <div class="detail-box">
                 <h2>
-                    Fruit shop
+                    EcoPharm shop
                 </h2>
                 <p>
                     There are many variations of passages of Lorem Ipsum available
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="col-md-6 px-0">
                 <div class="img-box">
-                    <img src="images/about-img.jpg" alt="">
+                    <img src="images/m-4.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-5">
@@ -74,7 +74,7 @@
                     <div class="heading_container">
                         <hr>
                         <h2>
-                            About Our Fruit Shop
+                            About Our EcoPharm
                         </h2>
                     </div>
                     <p>
@@ -98,170 +98,19 @@
         <div class="heading_container">
             <hr>
             <h2>
-                Fresh Fruit
+                Các sản phẩm
             </h2>
         </div>
     </div>
     <div class="container-fluid">
         <div class="text-center container py-5">
-            <h4 class="mt-4 mb-5"><strong>Các sản phẩm</strong></h4>
             <div class="row" id="medicineContainer">
-
             </div>
         </div>
-
     </div>
 </section>
 
 <!-- end fruit section -->
-
-
-<!-- client section -->
-
-<section class="client_section layout_padding-bottom">
-    <div class="container ">
-        <div class="heading_container">
-            <h2>
-                What Syas Cutomer
-            </h2>
-            <hr>
-        </div>
-        <div id="carouselExample2Controls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="client_container layout_padding-top">
-                        <div class="img-box">
-                            <img src="images/client-img.png" alt="">
-                        </div>
-                        <div class="detail-box">
-                            <h5>
-                                Jone Mark
-                            </h5>
-                            <p>
-                                <img src="images/left-quote.png" alt="">
-                                <span>
-                    Lorem ipsum dolor sit amet,
-                  </span>
-                                <img src="images/right-quote.png" alt=""> <br>
-                                consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                                veniam, quis nostrud exercitation ullamco laboris ut aliquip ex ea commodo
-                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="client_container layout_padding-top">
-                        <div class="img-box">
-                            <img src="images/client-img.png" alt="">
-                        </div>
-                        <div class="detail-box">
-                            <h5>
-                                Jone Mark
-                            </h5>
-                            <p>
-                                <img src="images/left-quote.png" alt="">
-                                <span>
-                    Lorem ipsum dolor sit amet,
-                  </span>
-                                <img src="images/right-quote.png" alt=""> <br>
-                                consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                                veniam, quis nostrud exercitation ullamco laboris ut aliquip ex ea commodo
-                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="client_container layout_padding-top">
-                        <div class="img-box">
-                            <img src="images/client-img.png" alt="">
-                        </div>
-                        <div class="detail-box">
-                            <h5>
-                                Jone Mark
-                            </h5>
-                            <p>
-                                <img src="images/left-quote.png" alt="">
-                                <span>
-                    Lorem ipsum dolor sit amet,
-                  </span>
-                                <img src="images/right-quote.png" alt=""> <br>
-                                consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                                veniam, quis nostrud exercitation ullamco laboris ut aliquip ex ea commodo
-                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExample2Controls" role="button" data-slide="prev">
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExample2Controls" role="button" data-slide="next">
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-
-    </div>
-</section>
-
-<!-- end client section -->
-
-
-<!-- contact section -->
-<section class="contact_section layout_padding-bottom">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="offset-lg-2 col-md-10 offset-md-1">
-                <div class="heading_container">
-                    <hr>
-                    <h2>
-                        Request A call back
-                    </h2>
-                </div>
-            </div>
-        </div>
-
-        <div class="layout_padding2-top">
-            <div class="row">
-                <div class="col-lg-4 offset-lg-2 col-md-5 offset-md-1">
-                    <form action="">
-                        <div class="contact_form-container">
-                            <div>
-                                <div>
-                                    <input type="text" placeholder="Full Name" />
-                                </div>
-                                <div>
-                                    <input type="email" placeholder="Email" />
-                                </div>
-                                <div>
-                                    <input type="text" placeholder="Phone Number" />
-                                </div>
-                                <div>
-                                    <input type="text" class="message_input" placeholder="Message" />
-                                </div>
-                                <div>
-                                    <button type="submit">
-                                        Send
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-md-6 px-0">
-                    <div class="map_container">
-                        <div class="map-responsive">
-                            <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- end contact section -->
 
 <!-- footer section -->
 <div th:include="static/footer :: footer"></div>
@@ -272,7 +121,51 @@
 <script type="text/javascript" src="/js/bootstrap.js"></script>
 <script type="text/javascript" src="/js/custom.js"></script>
 <script src="/js/medicine.js"></script>
+<script>
 
+    async function fetchCategory() {
+        console.log("fetchCategory function is called!"); // Log kiểm tra
+
+        try {
+            const response = await fetch("http://localhost:8080/api/categories");
+            if (!response.ok) {
+                throw new Error(`HTTP error! Status: ${response.status}`);
+            }
+
+            const data = await response.json();
+            console.log("Fetched categories:", data); // Kiểm tra dữ liệu trả về
+
+            const categoryList = document.getElementById("categoryList");
+            if (!categoryList) {
+                console.error("Element #categoryList not found!");
+                return;
+            }
+
+            categoryList.innerHTML = ""; // Xóa danh sách cũ
+
+            data.forEach(category => {
+                const listItem = document.createElement("li");
+                listItem.classList.add("nav-item");
+
+                listItem.innerHTML = `
+                    <a class="nav-link" href="category.html?id=${category.id}">
+                        ${category.categoryName}
+                    </a>
+                `;
+
+                categoryList.appendChild(listItem);
+            });
+
+            console.log("Categories rendered successfully!");
+        } catch (error) {
+            console.error("Error fetching categories:", error);
+        }
+    }
+
+    window.onload = function() {
+        fetchCategory();
+    };
+</script>
 </body>
 
 </html>
