--- a/src/main/resources/templates/static/footer.html
+++ b/src/main/resources/templates/static/footer.html
@@ -19,7 +19,7 @@
                         <a href="">
                             <img src="images/location.png" alt="">
                             <span>
-                Passages of Lorem Ipsum available
+                Thượng Mỗ, Đan Phượng, Hà Nội
               </span>
                         </a>
                     </div>
@@ -27,7 +27,7 @@
                         <a href="">
                             <img src="images/call.png" alt="">
                             <span>
-                Call : +012334567890
+                Call : +84 777 137 220
               </span>
                         </a>
                     </div>
@@ -35,7 +35,7 @@
                         <a href="">
                             <img src="images/mail.png" alt="">
                             <span>
-                demo@gmail.com
+                hphan0859@gmail.com
               </span>
                         </a>
                     </div>
@@ -87,8 +87,8 @@
     <!-- footer section -->
     <section class="container-fluid footer_section ">
         <p>
-            &copy; <span id="displayYear"></span> All Rights Reserved. Design by
-            <a href="https://html.design/">Free Html Templates</a>
+            &copy; <span id="displayYear"></span> Thời hạn của cuộc đời tùy thuộc sức khỏe,
+            <a href="https://html.design/">còn sức khỏe thì do cách sống quyết định.</a>
         </p>
     </section>
 </footer>
