--- a/src/main/resources/templates/static/header.html
+++ b/src/main/resources/templates/static/header.html
@@ -9,7 +9,7 @@
     <div class="hero_area">
         <!-- header section strats -->
         <div class="brand_box">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index">
         <span>
           EcoPharm
         </span>
@@ -33,7 +33,7 @@
                     <div class="carousel-item">
                         <div class="img-box">
                             <img src="images/m-3.jpg" alt="">
-                        </div>me
+                        </div>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -62,15 +62,27 @@
                             <ul id="categoryList" class="navbar-nav">
                             </ul>
                             <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="signin">Login</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="cart">Cart</a>
-                                </li>
+                                <div class="dropdown">
+                                    <a style="color: #fff" class="dropdown-toggle" href="#" role="button" id="userDropdown"
+                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <i class="fa fa-user" aria-hidden="true"></i>
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="userDropdown">
+                                        <a class="dropdown-item" th:text="${username}"></a>
+                                        <a th:if="${isAuthenticated}" class="dropdown-item" href="cart">Giỏ hàng</a>
+                                        <a th:if="${!isAuthenticated}" class="dropdown-item" href="signin">Đăng nhập</a>
+                                        <a th:if="${!isAuthenticated}" class="dropdown-item" href="register">Đăng ký</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a th:if="${isAuthenticated}" class="dropdown-item" th:href="@{/logout}">Logout</a>
+                                    </div>
+                                </div>
+
                             </ul>
                             <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
+                                <input type="text" id="searchInput" placeholder="Tìm kiếm" />
+                                <button class="btn my-2 my-sm-0 nav_search-btn border" type="submit">
+                                    <i class="fa fa-search" aria-hidden="true"></i>
+                                </button>
                             </form>
                         </div>
                     </div>
