--- a/src/main/resources/templates/admin/User/userList.html
+++ b/src/main/resources/templates/admin/User/userList.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Category List</title>
+    <title>User List</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="/assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="/assets/vendors/css/vendor.bundle.base.css">
@@ -15,12 +15,10 @@
     <link rel="stylesheet" href="/assets/vendors/owl-carousel-2/owl.carousel.min.css">
     <link rel="stylesheet" href="/assets/vendors/owl-carousel-2/owl.theme.default.min.css">
     <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <!-- endinject -->
     <!-- Layout styles -->
     <link rel="stylesheet" href="/assets/css/style.css">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="/assets/images/favicon.png" />
+    <link rel="shortcut icon" href="/assets/images/favicon.png"/>
 </head>
 <body>
 <div class="container-scroller">
@@ -36,26 +34,23 @@
         </nav>
         <!-- partial -->
         <div class="main-panel">
-            <h1 class="text-center">Supplier List</h1>
-            <a href="/add-supplier" class="btn btn-success mb-3">Add New Supplier</a>
+            <h1 class="text-center">User List</h1>
             <table class="table table-bordered">
                 <thead class="table-dark">
                 <tr>
                     <th>#</th>
-                    <th>Supplier Name</th>
-                    <th>Address</th>
-                    <th>Phone Number</th>
+                    <th>Name</th>
+                    <th>Image</th>
+                    <th>Price</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
-                <tbody id="supplierTable"></tbody>
+                <tbody id="medicineTable"></tbody>
             </table>
         </div>
         <!-- main-panel ends -->
     </div>
     <!-- page-body-wrapper ends -->
 </div>
-<!-- container-scroller -->
-<script src="/js/supplier.js"></script>
 </body>
 </html>
