--- a/src/main/resources/templates/views/index.html
+++ b/src/main/resources/templates/views/index.html
@@ -26,6 +26,11 @@
     <link href="/css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="/css/responsive.css" rel="stylesheet" />
+    <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+            rel="stylesheet"
+    />
+
 </head>
 
 <body>
@@ -74,14 +79,14 @@
                     <div class="heading_container">
                         <hr>
                         <h2>
-                            About Our EcoPharm
+                            Về EcoPharm
                         </h2>
                     </div>
                     <p>
-                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour
+                        Nơi chăm sóc sức khỏe của bạn với những sản phẩm chất lượng, an toàn và đáng tin cậy. Chúng tôi cam kết mang đến giải pháp y tế tốt nhất cho mọi gia đình
                     </p>
                     <a href="">
-                        Read More
+                        Đọc thêm
                     </a>
                 </div>
             </div>
