--- a/src/main/resources/templates/views/cart.html
+++ b/src/main/resources/templates/views/cart.html
@@ -37,5 +37,7 @@
 <div th:include="static/footer :: footer"></div>
 
 <script src="/js/cart.js"></script>
+<script src="/js/category.js"></script>
+
 </body>
 </html>
