--- a/src/main/resources/templates/error-403.html
+++ b/src/main/resources/templates/error-403.html
@@ -214,7 +214,7 @@
   </svg>
   <h1>FORBIDDEN</h1>
   <div class="mb-3">
-    <a class="btn btn-primary " href="/chocolate/index">Home Page</a>
+    <a class="btn btn-primary " href="login">Home Page</a>
 
   </div>
 
