--- a/src/main/resources/templates/views/checkout.html
+++ b/src/main/resources/templates/views/checkout.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 order-md-1">
-            <form class="needs-validation" novalidate onsubmit="createOrder(event)">
+                <form class="needs-validation" novalidate onsubmit="createOrder(event)">
                 <h4 class="mb-3">Giỏ hàng</h4>
                 <ul class="list-group mb-3" id="cartList"></ul>
                 <div id="totalAmount" class="d-none"></div>
@@ -47,7 +47,8 @@
     </div>
 </div>
 
-<script src="/js/cart.js"></script>
+<script src="/js/order.js"></script>
+
 
 </body>
 </html>
