--- a/src/main/resources/templates/views/article.html
+++ b/src/main/resources/templates/views/article.html
@@ -134,7 +134,7 @@
 
     function showArticleDetail(articleId) {
         // Redirect to article detail page with the article ID
-        window.location.href = `/edit-article?id=${articleId}`;
+        window.location.href = `/detail-article?id=${articleId}`;
     }
 </script>
 </body>
