--- a/src/main/resources/templates/views/index.html
+++ b/src/main/resources/templates/views/index.html
@@ -171,6 +171,11 @@
     window.onload = function () {
         fetchCategory();
     };
+
+    function logout() {
+        // Xóa userId khỏi localStorage
+        localStorage.removeItem("userId");
+    }
 </script>
 </body>
 
